# Geometry

./: CMakeLists.txt  README.md
include/Geometry/: point.hpp  vector.hpp
include/Geometry/Shape/: rectangle.hpp  shape.hpp
src/: point.cpp  vector.cpp
src/Shape/: rectangle.cpp  shape.cpp
